@@ -2,6 +2,7 @@
 # This file is updated with Maddlog
 
 * Wed Sep 16 2015 Sjoerd Mullender <sjoerd@acm.org>
+- Removed BATleftfetchjoin.  Use BATproject instead.
 - Removed BUNins from the list of exported functions.
 
 * Thu Sep 10 2015 Sjoerd Mullender <sjoerd@acm.org>
